# PokeBattle

./: CMakeLists.txt  Makefile  README.md  pokebattle
include/: ai_integration.h  battle.h  battle_effects.h  battle_timing.h  decision_tree.h  game_state.h  globals.h  gui.h  hp_bar.h  ia_integration.h  main.h  monsters.h  raygui.h  scaling.h  screens.h  structures.h
include/render/: battle_renderer.h  credits_renderer.h  hud_elements.h  loading_renderer.h  menu_renderer.h  resources.h  selection_renderer.h  settings_renderer.h  types_table_renderer.h
src/: battle.c  battle_effects.c  decision_tree.c  globals.c  gui.c  hp_bar.c  ia_integration.c  main.c  monsters.c  raygui_impl.c  scaling.c  screens.c  structures.c
src/render/: battle_renderer.c  credits_renderer.c  hud_elements.c  loading_renderer.c  menu_renderer.c  resources.c  selection_renderer.c  settings_renderer.c  types_table_renderer.c
